atualização de Código

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,7 @@
     "cSpell.words": [
         "conosco",
         "Contato",
-        "logísitcos",
         "monitoramento",
-        "ºvalor",
-        "Portologistica",
-        "potuaria",
-        "SOLUÇÔES"
+        "Portologistica"
     ]
 }
