--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "conosco",
         "Contato",
         "monitoramento",
+        "niterói",
         "Portologistica"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
